[package]
name = "mpgen"
version = "0.1.0"
edition = "2021"
description = "Create memorable passwords easily using this CLI"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.12", features = ["derive"] }
rand = "0.8.5"
strum_macros = "0.24.3"
