[package]
name = "mpgen"
version = "0.1.2"
edition = "2021"
description = "Create memorable passwords easily using this CLI"
license = "MIT"
repository = "https://github.com/Antosser/memorable-password-generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.12", features = ["derive"] }
rand = "0.8.5"
strum_macros = "0.24.3"
